--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
