--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-react": "^7.30.0",
+    "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
@@ -29,8 +30,7 @@
     "react-router-dom": "^6.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
-    "styled-components": "^5.3.5",
-    "validator": "^13.7.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
