--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-react": "^7.30.0",
+    "framer-motion": "^6.5.1",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
