--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.4.1",
     "postcss-syntax": "^0.36.2",
     "prettier": "2.3.2",
