--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^5.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
+    "svg-jest": "^1.0.1",
     "vite": "^2.9.9"
   },
   "lint-staged": {
